<resources>
    <string name="app_name">Olimpiadas Math</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Test -->
    <string name="title_1">Pregunta 1</string>
    <string name="title_2">Pregunta 2</string>
    <string name="title_3">Pregunta 3</string>
    <string name="title_4">Pregunta 4</string>
    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="next">Siguiente</string>
    <string name="back">Atras</string>
    <string name="finish">Terminar</string>

    <string name="alert_shop">¿Esta seguro de realizar esta compra?</string>
    <string name="no_enought_coins">No tienes suficientes monedas :( ve a practicar para ganar más</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="start_sesion">Iniciar Sesión</string>
    <string name="recover_password">Recuperar Contraseña</string>
    <string name="nombre_de_usuario">NOMBRE DE USUARIO</string>
    <string name="level">Nivel</string>
    <string name="experience">Experiencia</string>
    <string name="practice">Práctica</string>
    <string name="library">Tutor</string>
    <string name="challenge">Reto</string>
    <string name="ranking">Ranking</string>
    <string name="options">Opciones</string>
    <string name="store">Tienda</string>
    <string name="fiel_required">Campo requerido</string>
    <string name="user_not_found">Usuario no encontrado</string>
    <string name="profile">PERFIL</string>
    <string name="tickets">Boletos</string>
    <string name="coins">Monedas</string>
    <string name="pts">PTS</string>
    <string name="won">Ganaste</string>
    <string name="exp">Exp:</string>
    <string name="settings">Ajustes</string>
    <string name="music">Música</string>
    <string name="effects">Efectos</string>
    <string name="lenguage">Idioma</string>
    <string name="aboutgame">Ayuda sobre el juego</string>
    <string name="copyright">Creditos</string>
    <string name="shop">Tienda</string>
    <string name="result_title">RECOMPENSAS</string>


    <string name="corrects_answers_challenge">Correctas:</string>
    <string name="time_challenge">Tiempo:</string>
    <string name="coins_challenge">Monedas:</string>
    <string name="btn_continue">CONTINUAR</string>
    <string name="text_dialog_info_practice">Vas a ingresar a la practica, presiona continuar para iniciar</string>
    <string name="text_dialog_info_challenge">Si aceptas el Challenge, apostaras 20 Monedas \n¡Aunque podras ganar mucho mas de lo apostado! </string>
    <string name="title_dialog_challenge">Hola, ¿Quieres probar tus habilidades?</string>
    <string name="title_dialog_practice">Hola, que bueno verte por aquí!</string>
    <string name="whitout_coins">Te quedaste sin monedas!</string>
    <string name="begin_again">Vuelve a comenzar!!!</string>
    <string name="text_dialog_exit_challenge" >¿Seguro quieres terminar el reto? \nPerderas las monedas que pagaste para ingresar y se contará como perdido</string>

    <string-array name="lenguages">
        <item>Español</item>
        <item>Ingles</item>
    </string-array>

    <string-array name="array_advices_challenge">
        <item>Si gastas 2 Monedas en el preview, veras la pregunta por 15s!</item>
        <item>¡Apostar, un arma de doble filo! Necesitas conocimiento para usarla de la mejor manera.</item>
        <item>¡Si tienes buenos resultados, puedes estar en el Ranking!</item>
        <item>¡Tienes 3 minutos para responder cada pregunta!</item>
        <item>¡El preview resta 15s de los 3min que dura la pregunta!</item>
        <item>¡Si obtienes un buen resultado, tienes la posibildad de estar en el Ranking!</item>
    </string-array>
    <string-array name="array_advices_practice">
        <item>Recuerda: "La practica hace al maestro"</item>
        <item>¡Ganararás Monedas por cada pregunta correcta!</item>
        <item>¡Las Monedas son necesarios para ingresar a Reto!</item>
        <item>¡Guarda las Monedas, te serviran mas adelante para adquirir articulos!</item>
        <item>¡Preparate para ser el mejor de todo los usuarios!</item>
        <item>¡Obten muchas Monedas y descresta a tus amigos!</item>
    </string-array>
</resources>

