<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlog"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="olimpiadas.sena.com.olimpiadasmath.activities.session.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center">
        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/splash"
            android:layout_margin="20dp"
            android:background="@drawable/logoappnombre"
            />-->

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="bottom"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_tittle"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_views"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/etv_login_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_person"
                        android:gravity="center"
                        android:hint="@string/user"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:paddingRight="40dp"
                        android:textSize="@dimen/text_size" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/etv_login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_lock"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="40dp"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="250dp"
                    android:text="@string/start_sesion"

                    />

                <Button
                    android:id="@+id/btn_lose_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:maxWidth="250dp"
                    android:text="@string/recover_password"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
