<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="olimpiadas.sena.com.olimpiadasmath.fragments.profile.PerfilFragment">

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/imgPic"
            android:src="@mipmap/ic_launcher_round"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/btnTakePic"
                android:background="@mipmap/ic_camera"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/btnOpenGal"
                android:background="@mipmap/ic_folder"
                />
        </LinearLayout>

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btnSavePic"
            android:background="@mipmap/ic_save"/>


    </LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_transparent_with_stroke">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="right" >
            <TextView
                android:id="@+id/tv_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_views"
                android:text="@string/experience"
                android:textSize="@dimen/tamanoletrasubtitulos"
                android:textColor="@color/primary_text"/>

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_views"
                android:text="@string/coins"
                android:textSize="@dimen/tamanoletrasubtitulos"
                android:textColor="@color/primary_text"/>
        </LinearLayout><!-- Lin 1-->
        <LinearLayout
            android:id="@+id/ticket"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <FrameLayout
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_profile_progress_bar1"
                    android:layout_width="85dp"
                    android:layout_height="11dp"
                    android:src="@drawable/backg"
                    android:layout_gravity="center" />

                <ImageView
                    android:id="@+id/img_profile_progress_bar2"
                    android:layout_width="88dp"
                    android:layout_height="13dp"
                    android:layout_marginLeft="3dp"
                    android:src="@drawable/clip_source" />

            </FrameLayout>

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/img_coins"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_below="@+id/identicon"
                android:src="@drawable/coin"
                android:padding="@dimen/padding_views"/>
        </LinearLayout><!-- Lin 2-->


        <LinearLayout
            android:gravity="center"
            android:id="@+id/coinsLayout"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_gravity="center"
                android:id="@+id/tv_profile_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView"
                android:padding="@dimen/padding_views"
                android:textSize="@dimen/text_size"
                android:text="30%" />

            <TextView
                android:id="@+id/tv_profile_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x4"
                android:padding="@dimen/padding_views"
                android:textSize="@dimen/text_size" />
        </LinearLayout><!-- Lin 3-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_nick"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_gravity="center"
            android:id="@+id/tv_profile_level_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_views"
            android:textSize="40sp"
            android:text="x4" />

        <TextView
            android:layout_gravity="center"
            android:id="@+id/tv_level"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_views"
            android:textSize="20sp"
            android:textColor="@color/greenSena"
            android:text="@string/level"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:text="Cerrar Sesión"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>
